<?xml version="1.0"?>
<package>
  <name>foo_msgs</name>
  <version>0.1.0</version>
  <description>The foo_msgs package</description>

  <maintainer email="bar@baz.com">william</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

</package>
