<?xml version="1.0"?>
<package>
  <name>package_with_data</name>
  <version>0.0.0</version>
  <description>package containing a resource used by another package</description>

  <maintainer email="bar@baz.com">william</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
