<?xml version="1.0"?>
<package>
  <name>test_with_data</name>
  <version>0.1.0</version>
  <description>The test_with_data package</description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>gtest</test_depend>

</package>